make esmessagefields only present with values